# ebpf-tools

./: LICENSE  README.md
dns-delay/: CMakeLists.txt  README.md
dns-delay/scripts/: test.sh
dns-delay/src/: common.h  dns_delay_injector.bpf.c  dns_delay_injector.c  proc_name_mapper.bpf.c
syscall-blocker/: .gitignore  CMakeLists.txt  README.md
syscall-blocker/scripts/: test.sh
syscall-blocker/src/: common.h  generate.py  syscall_blocker.bpf.c  syscall_blocker.c
threadviz/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
threadviz/cmake/: FindBpfObject.cmake  clang-format.cmake
threadviz/scripts/: visualize.sh
threadviz/src/: common.h  thread_visualizer.bpf.c  thread_visualizer.cc
